fix:analytics01 執行完畢

--- a/03_TicketAnalysisCode.ipynb
+++ b/03_TicketAnalysisCode.ipynb
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "c1428724",
    "metadata": {},
    "outputs": [],
@@ -462,7 +462,9 @@
     "reformat_folder = create_folder(os.path.join(os.getcwd(), '..', '01_初步篩選整理票證', '04_計算交通量格式')) # 建立01-03 所有使用到的點位資料夾\n",
     "\n",
     "hourlycount_folder = create_folder(os.path.join(os.getcwd(), '..', '02_初步分析', '01_分時計次')) # 建立01-03 所有使用到的點位資料夾\n",
-    "dailybetweenstops_folder = create_folder(os.path.join(os.getcwd(), '..', '02_初步分析', '02_全日站間量'))\n"
+    "dailybetweenstops_folder = create_folder(os.path.join(os.getcwd(), '..', '02_初步分析', '02_全日站間量'))\n",
+    "od_folder = create_folder(os.path.join(os.getcwd(), '..', '02_初步分析', '03_OD起迄量'))\n",
+    "\n"
    ]
   },
   {
@@ -672,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "daecf5a5",
    "metadata": {},
    "outputs": [],
@@ -729,8 +731,8 @@
     "    \n",
     "    df['WDWK'] = np.select(\n",
     "        [wdwk_1_condition, wdwk_neg1_condition], # 條件列表\n",
-    "        [1, -1],                                # 對應的值\n",
-    "        default=0                               # 預設值 (其他日子=0)\n",
+    "        [1, 0],                                # 對應的值\n",
+    "        default=-1                               # 預設值 (其他日子=1)\n",
     "    )\n",
     "\n",
     "    return df\n",
@@ -789,292 +791,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c774c3ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filelist = findfiles(checkok_ticketfolder, filetype='csv', recursive=False)\n",
-    "\n",
-    "for file in filelist:\n",
-    "\n",
-    "    reformat_output_file = os.path.join(\n",
-    "        reformat_folder,\n",
-    "        os.path.basename(file).replace(\"_cleaned.csv\", \"_reformatted.csv\")\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "    # 如果 mark_ticket_errors 需要全表上下文，改成 chunksize=None\n",
-    "    reader = pd.read_csv(file, chunksize=1000)\n",
-    "\n",
-    "    first_chunk = True\n",
-    "    for chunk in reader:\n",
-    "\n",
-    "        output = add_weekdayandweekendcolumns(df=chunk,\n",
-    "                                        timecolumns= 'InfoDate', \n",
-    "                                        filterdate= ['2024-10-09', '2024-10-10', '2024-10-11', '2024-10-12', '2024-10-13', '2024-10-14', '2024-10-15'])\n",
-    "        output = must_outputformat(output)\n",
-    "\n",
-    "        output.to_csv(\n",
-    "            reformat_output_file,\n",
-    "            mode='w' if first_chunk else 'a',\n",
-    "            header=first_chunk,\n",
-    "            index=False,\n",
-    "            encoding='utf-8-sig'\n",
-    "        )\n",
-    "        first_chunk = False  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "7122013e",
+   "execution_count": 41,
+   "id": "da6279df",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Authority</th>\n",
-       "      <th>OperatorNo</th>\n",
-       "      <th>HolderType</th>\n",
-       "      <th>TicketType</th>\n",
-       "      <th>SubTicketType</th>\n",
-       "      <th>RouteUID</th>\n",
-       "      <th>RouteName</th>\n",
-       "      <th>SubRouteUID</th>\n",
-       "      <th>SubRouteName</th>\n",
-       "      <th>Direction</th>\n",
-       "      <th>...</th>\n",
-       "      <th>BoardinngDate</th>\n",
-       "      <th>BoardingHour</th>\n",
-       "      <th>DeboardingStopUID</th>\n",
-       "      <th>DeboardingStopName</th>\n",
-       "      <th>DeboardingStopSequence</th>\n",
-       "      <th>DeboardingDate</th>\n",
-       "      <th>DeboardingHour</th>\n",
-       "      <th>InfoDate</th>\n",
-       "      <th>DaysofWeek</th>\n",
-       "      <th>WDWK</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NewTaipei</td>\n",
-       "      <td>301</td>\n",
-       "      <td>A</td>\n",
-       "      <td>4</td>\n",
-       "      <td>#NOR-1200</td>\n",
-       "      <td>NWT18258</td>\n",
-       "      <td>712副</td>\n",
-       "      <td>NWT160167</td>\n",
-       "      <td>712副</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2024-10-01</td>\n",
-       "      <td>16</td>\n",
-       "      <td>NWT221599</td>\n",
-       "      <td>迴龍派出所</td>\n",
-       "      <td>28</td>\n",
-       "      <td>2024-10-01</td>\n",
-       "      <td>16</td>\n",
-       "      <td>2024-10-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NewTaipei</td>\n",
-       "      <td>301</td>\n",
-       "      <td>B</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NWT16515</td>\n",
-       "      <td>858</td>\n",
-       "      <td>NWT157550</td>\n",
-       "      <td>858</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2024-10-01</td>\n",
-       "      <td>12</td>\n",
-       "      <td>NWT131311</td>\n",
-       "      <td>泰山區公所</td>\n",
-       "      <td>37</td>\n",
-       "      <td>2024-10-01</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2024-10-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NewTaipei</td>\n",
-       "      <td>301</td>\n",
-       "      <td>A</td>\n",
-       "      <td>4</td>\n",
-       "      <td>#NOR-1200</td>\n",
-       "      <td>NWT18119</td>\n",
-       "      <td>967</td>\n",
-       "      <td>NWT159907</td>\n",
-       "      <td>967體育大學行政教學大樓</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2024-10-01</td>\n",
-       "      <td>14</td>\n",
-       "      <td>NWT203915</td>\n",
-       "      <td>空間樂園社區</td>\n",
-       "      <td>40</td>\n",
-       "      <td>2024-10-01</td>\n",
-       "      <td>15</td>\n",
-       "      <td>2024-10-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NewTaipei</td>\n",
-       "      <td>301</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NWT10474</td>\n",
-       "      <td>636</td>\n",
-       "      <td>NWT10474</td>\n",
-       "      <td>636</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2024-10-01</td>\n",
-       "      <td>20</td>\n",
-       "      <td>NWT10566</td>\n",
-       "      <td>捷運新莊站(新莊郵局)</td>\n",
-       "      <td>20</td>\n",
-       "      <td>2024-10-01</td>\n",
-       "      <td>21</td>\n",
-       "      <td>2024-10-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NewTaipei</td>\n",
-       "      <td>301</td>\n",
-       "      <td>A</td>\n",
-       "      <td>4</td>\n",
-       "      <td>#NOR-1200</td>\n",
-       "      <td>NWT16591</td>\n",
-       "      <td>857</td>\n",
-       "      <td>NWT157639</td>\n",
-       "      <td>857</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2024-10-01</td>\n",
-       "      <td>17</td>\n",
-       "      <td>NWT139066</td>\n",
-       "      <td>菜寮(重新路)</td>\n",
-       "      <td>65</td>\n",
-       "      <td>2024-10-01</td>\n",
-       "      <td>18</td>\n",
-       "      <td>2024-10-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Authority  OperatorNo HolderType  TicketType SubTicketType  RouteUID  \\\n",
-       "0  NewTaipei         301          A           4     #NOR-1200  NWT18258   \n",
-       "1  NewTaipei         301          B           1           NaN  NWT16515   \n",
-       "2  NewTaipei         301          A           4     #NOR-1200  NWT18119   \n",
-       "3  NewTaipei         301          A           1           NaN  NWT10474   \n",
-       "4  NewTaipei         301          A           4     #NOR-1200  NWT16591   \n",
-       "\n",
-       "  RouteName SubRouteUID   SubRouteName  Direction  ... BoardinngDate  \\\n",
-       "0      712副   NWT160167           712副          1  ...    2024-10-01   \n",
-       "1       858   NWT157550            858          0  ...    2024-10-01   \n",
-       "2       967   NWT159907  967體育大學行政教學大樓          1  ...    2024-10-01   \n",
-       "3       636    NWT10474            636          1  ...    2024-10-01   \n",
-       "4       857   NWT157639            857          0  ...    2024-10-01   \n",
-       "\n",
-       "  BoardingHour  DeboardingStopUID DeboardingStopName  DeboardingStopSequence  \\\n",
-       "0           16          NWT221599              迴龍派出所                      28   \n",
-       "1           12          NWT131311              泰山區公所                      37   \n",
-       "2           14          NWT203915             空間樂園社區                      40   \n",
-       "3           20           NWT10566        捷運新莊站(新莊郵局)                      20   \n",
-       "4           17          NWT139066            菜寮(重新路)                      65   \n",
-       "\n",
-       "  DeboardingDate DeboardingHour   InfoDate DaysofWeek  WDWK  \n",
-       "0     2024-10-01             16 2024-10-01          1     1  \n",
-       "1     2024-10-01             12 2024-10-01          1     1  \n",
-       "2     2024-10-01             15 2024-10-01          1     1  \n",
-       "3     2024-10-01             21 2024-10-01          1     1  \n",
-       "4     2024-10-01             18 2024-10-01          1     1  \n",
-       "\n",
-       "[5 rows x 23 columns]"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_14888\\315726734.py:44: DtypeWarning: Columns (6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file)\n"
+     ]
     }
    ],
    "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f8655461",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "da6279df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# 分析01: 確認資料各票種、各路線、平假日、起點、迄點筆數\n",
     "\n",
-    "def analytics01_hourlycount(checkok_ticketfolder, \n",
+    "def analytics01_hourlycount(reformat_folder, \n",
     "                            hourlycount_folder, \n",
     "                            seqfolder = r\"D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\01公車站序資料\",\n",
     "                            returndf = True):\n",
     "\n",
-    "    files = findfiles(checkok_ticketfolder)\n",
+    "    files = findfiles(reformat_folder)\n",
     "    files = [f for f in files if 'TO1' in f]\n",
     "    df = read_combined_dataframe(files)\n",
-    "    df['BoardingTime'] = pd.to_datetime(df['BoardingTime'], errors='coerce')\n",
-    "    df['DeboardingTime'] = pd.to_datetime(df['DeboardingTime'], errors='coerce')\n",
-    "    df['BoardinngDate'] = df['BoardingTime'].dt.date\n",
-    "    df['DeboardingDate'] = df['DeboardingTime'].dt.date\n",
-    "    df['BoardingHour'] = df['BoardingTime'].dt.hour\n",
-    "    df['DeboardingHour'] = df['DeboardingTime'].dt.hour\n",
     "\n",
-    "    groupbycolumns = ['HolderType', \n",
+    "    groupbycolumns = ['Authority', 'HolderType', \n",
     "                    'RouteUID', 'RouteName', 'SubRouteUID', 'SubRouteName',\n",
     "                    'BoardingStopUID', 'BoardingStopName', 'BoardingStopSequence', 'BoardinngDate', 'BoardingHour',\n",
     "                    'DeboardingStopUID', 'DeboardingStopName', 'DeboardingStopSequence', 'DeboardingDate', 'DeboardingHour', 'FilePath']\n",
@@ -1107,7 +849,7 @@
     "    if returndf:\n",
     "        return df_count\n",
     "\n",
-    "analytics01_hourlycount(checkok_ticketfolder, \n",
+    "analytics01_hourlycount(reformat_folder, \n",
     "                        hourlycount_folder, \n",
     "                        seqfolder = r\"D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\01公車站序資料\", \n",
     "                        returndf=False)"
@@ -1120,7 +862,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# "
+    "# 分析02: 確認資料起迄OD各站點次數\n"
    ]
   }
  ],
