--- a/03_TicketAnalysisCode.ipynb
+++ b/03_TicketAnalysisCode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "51662c73",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "873ae102",
    "metadata": {},
    "outputs": [],
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c1428724",
    "metadata": {},
    "outputs": [],
@@ -821,16 +821,7 @@
    "execution_count": null,
    "id": "da6279df",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_26620\\593427623.py:44: DtypeWarning: Columns (6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(file)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 分析01: 確認資料各票種、各路線、平假日、起點、迄點筆數\n",
     "def analytics01_hourlycount(reformat_folder, \n",
@@ -876,9 +867,9 @@
     "        return df_count\n",
     "\n",
     "# analytics01_hourlycount(reformat_folder, \n",
-    "                        hourlycount_folder, \n",
-    "                        seqfolder = r\"D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\01公車站序資料\", \n",
-    "                        returndf=False)\n",
+    "                        # hourlycount_folder, \n",
+    "                        # seqfolder = r\"D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\01公車站序資料\", \n",
+    "                        # returndf=False)\n",
     "\n"
    ]
   },
@@ -893,6 +884,7 @@
     "def checkseq(df, df_seq, process_step = 2):\n",
     "\n",
     "    df = df.copy()\n",
+    "    df_seq = df_seq.copy()\n",
     "\n",
     "    df = df[~((df['BoardingStopUID'] == \"-99\") | (df['DeboardingStopUID'] == \"-99\"))]\n",
     "\n",
@@ -954,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": null,
    "id": "97835db5",
    "metadata": {},
    "outputs": [],
@@ -970,31 +962,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": null,
    "id": "d115670f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_26620\\322957744.py:33: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_process['BoardingStopSequence_S'] = pd.to_numeric(df_process['BoardingStopSequence_S'], errors='coerce')\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_26620\\322957744.py:34: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_process['DeboardingStopSequence_S'] = pd.to_numeric(df_process['DeboardingStopSequence_S'], errors='coerce')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dfkeep, df = checkseq(df, df_seq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b9c1576",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80feb954",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def matchwithstopname(df,dfseq):\n",
+    "    # df_seq = df_seq.copy()\n",
+    "    # df = df.copy()\n",
+    "\n",
+    "df_seq = df_seq.reindex(columns = ['RouteUID', 'SubRouteUID', 'Direction', 'StopUID', 'StopName_Zh', 'StopSequence']).rename(columns = {'StopName_Zh':'StopName'})\n",
+    "\n",
+    "mask_boardingseq = df['BoardingStopSequence_S'].isna()\n",
+    "df_temp = df[mask_boardingseq].copy()\n",
+    "df_temp = df_temp.drop(columns = ['BoardingStopName_S', 'BoardingStopSequence_S'])\n",
+    "\n",
+    "df_temp = pd.merge(df_temp, \n",
+    "                   df_seq.rename(columns = {'StopUID':'BoardingStopUID_S',\n",
+    "                                            'StopName':'BoardingStopName', \n",
+    "                                            'StopSequence':'BoardingStopSequence_S'}).drop_duplicates(subset = ['RouteUID', 'SubRouteUID', 'Direction', 'BoardingStopName']),\n",
+    "                   on = ['RouteUID', 'SubRouteUID', 'Direction', 'BoardingStopName'],\n",
+    "                   how = 'left')\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7db6c0d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53f706b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_seq = df_seq.copy()\n",
+    "df_seq = df_seq.reindex(columns = ['RouteUID', 'SubRouteUID', 'Direction', 'StopUID', 'StopName_Zh', 'StopSequence']).rename(columns = {'StopName_Zh':'StopName'})\n",
+    "\n",
+    "mask_deboardingseq = df['DeboardingStopSequence_S'].isna()\n",
+    "\n",
+    "df_temp = df[mask_deboardingseq].copy()\n",
+    "df_temp['Direction_another'] = 1 - df_temp['Direction']\n",
+    "df_temp = df_temp.drop(columns = ['DeboardingStopName_S', 'DeboardingStopSequence_S'])\n",
+    "df_temp = pd.merge(df_temp, \n",
+    "                   df_seq.rename(columns = {'StopUID':'DeboardingStopUID',\n",
+    "                                            'StopName':'DeboardingStopName_S', \n",
+    "                                            'StopSequence':'DeboardingStopSequence_S',\n",
+    "                                            'Direction':'Direction_another'}).drop_duplicates(subset = ['RouteUID', 'SubRouteUID', 'Direction_another', 'DeboardingStopUID']),\n",
+    "                    on = ['RouteUID', 'SubRouteUID', 'Direction_another', 'DeboardingStopUID'],\n",
+    "                    how = 'left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2345967",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_temp.reindex(columns = ['RouteUID', 'SubRouteUID', 'Direction', 'Direction_another', \n",
+    "                                                                                  'BoardingStopUID', 'BoardingStopName', 'BoardingStopSequence', 'BoardingStopName_S', 'BoardingStopSequence_S',\n",
+    "                                                                                  'DeboardingStopUID', 'DeboardingStopName', 'DeboardingStopSequence', \n",
+    "                                                                                  'DeboardingStopName_S', 'DeboardingStopSequence_S'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "409322a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_seq[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23d10816",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[df['BoardingStopSequence'] >= df['DeboardingStopSequence']].reindex(columns = ['RouteUID', 'SubRouteUID', 'Direction', 'Direction_another', \n",
+    "                                                                                  'BoardingStopUID', 'BoardingStopName', 'BoardingStopSequence', 'BoardingStopName_S', 'BoardingStopSequence_S',\n",
+    "                                                                                  'DeboardingStopUID', 'DeboardingStopName', 'DeboardingStopSequence', \n",
+    "                                                                                  'DeboardingStopName_S', 'DeboardingStopSequence_S'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f7c3146",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_seq[\n",
+    "       (df_seq['SubRouteUID'] == 'NWT158438') &\n",
+    "       (df_seq['StopName'].str.contains('清水'))\n",
+    "       # df_seq['StopUID'] == 'NWT15928'\n",
+    "       ]"
    ]
   },
   {
