update:隱藏執行程序

--- a/03_TicketAnalysisCode.ipynb
+++ b/03_TicketAnalysisCode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "51662c73",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "873ae102",
    "metadata": {},
    "outputs": [],
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "c1428724",
    "metadata": {},
    "outputs": [],
@@ -515,7 +515,7 @@
     "                        )\n",
     "                print(\"輸出路徑：\", output)\n",
     "\n",
-    "pre01_split_ticket_with_day(selectdate_start, selectdate_end, selecttime_ticket_folder)"
+    "# pre01_split_ticket_with_day(selectdate_start, selectdate_end, selecttime_ticket_folder)"
    ]
   },
   {
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b3d92724",
    "metadata": {},
    "outputs": [
@@ -672,12 +672,12 @@
     "\n",
     "        print(f\"清洗後資料輸出：{cleaned_output_path}\")\n",
     "\n",
-    "pre02_get_correct_tickets(selecttime_ticket_folder, checkok_ticketfolder)"
+    "# pre02_get_correct_tickets(selecttime_ticket_folder, checkok_ticketfolder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2f70d87d",
    "metadata": {},
    "outputs": [
@@ -866,12 +866,12 @@
     "    # a['Auth'] = a['StopUID'].str[:3]\n",
     "    # a.sort_values(['Auth'])\n",
     "\n",
-    "pre03_findstops( checkok_ticketfolder, seqfolder = os.path.abspath(os.path.join(os.getcwd(), '..', '..', 'TicketAnalysis', '00_TDX資料下載', '01公車站序資料')))"
+    "# pre03_findstops( checkok_ticketfolder, seqfolder = os.path.abspath(os.path.join(os.getcwd(), '..', '..', 'TicketAnalysis', '00_TDX資料下載', '01公車站序資料')))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "daecf5a5",
    "metadata": {},
    "outputs": [],
@@ -983,12 +983,12 @@
     "            )\n",
     "            first_chunk = False  \n",
     "\n",
-    "pre04_reformat(checkok_ticketfolder, reformat_folder, filterdate = ['2024-10-09', '2024-10-10', '2024-10-11', '2024-10-12', '2024-10-13', '2024-10-14', '2024-10-15'])"
+    "# pre04_reformat(checkok_ticketfolder, reformat_folder, filterdate = ['2024-10-09', '2024-10-10', '2024-10-11', '2024-10-12', '2024-10-13', '2024-10-14', '2024-10-15'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "da6279df",
    "metadata": {},
    "outputs": [
@@ -1045,11 +1045,10 @@
     "    if returndf:\n",
     "        return df_count\n",
     "\n",
-    "analytics01_hourlycount(reformat_folder, \n",
-    "                        hourlycount_folder, \n",
-    "                        # seqfolder = r\"D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\01公車站序資料\", \n",
-    "                        seqfolder = os.path.abspath(os.path.join(os.getcwd(), '..', '..', 'TicketAnalysis', '00_TDX資料下載', '01公車站序資料')),\n",
-    "                        returndf=False)\n",
+    "# analytics01_hourlycount(reformat_folder, \n",
+    "#                         hourlycount_folder, \n",
+    "#                         seqfolder = os.path.abspath(os.path.join(os.getcwd(), '..', '..', 'TicketAnalysis', '00_TDX資料下載', '01公車站序資料')),\n",
+    "#                         returndf=False)\n",
     "\n"
    ]
   },
@@ -1063,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "90489bce",
    "metadata": {},
    "outputs": [],
@@ -1194,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "b0ea191e",
    "metadata": {},
    "outputs": [],
@@ -1251,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "97835db5",
    "metadata": {},
    "outputs": [
@@ -1259,7 +1258,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/1p/d63vtkgd60d4sbpl791031gw0000gn/T/ipykernel_14024/3245760545.py:2: DtypeWarning: Columns (5) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_14412\\3245760545.py:2: DtypeWarning: Columns (5) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv( os.path.abspath(os.path.join(os.getcwd(), '..', '..', 'TicketAnalysis', '02_初步分析', '01_分時計次', '上下車區分票種分時計次(未修正站序是否正確).csv')))\n"
      ]
     },
@@ -1274,13 +1273,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/1p/d63vtkgd60d4sbpl791031gw0000gn/T/ipykernel_14024/13492506.py:36: SettingWithCopyWarning: \n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_14412\\13492506.py:36: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_process['BoardingStopSequence_S'] = pd.to_numeric(df_process['BoardingStopSequence_S'], errors='coerce')\n",
-      "/var/folders/1p/d63vtkgd60d4sbpl791031gw0000gn/T/ipykernel_14024/13492506.py:37: SettingWithCopyWarning: \n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_14412\\13492506.py:37: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1302,7 +1301,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/1p/d63vtkgd60d4sbpl791031gw0000gn/T/ipykernel_14024/3090883667.py:11: SettingWithCopyWarning: \n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_14412\\3090883667.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1851,7 +1850,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
