fix:要驗證為什麼我們現在處理的on、off對不起來

--- a/03_TicketAnalysisCode.ipynb
+++ b/03_TicketAnalysisCode.ipynb
@@ -1104,45 +1104,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "id": "078fc588",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_hourseq = seq_withhour(monthlist=['2024-10', '2024-11'])"
+    "def seq_on_and_off_count(hourlycount_folder):\n",
+    "    # 分析02: 重新比對站序 & 處理站間量\n",
+    "    df = pd.read_csv(os.path.join(hourlycount_folder, '上下車區分票種分時計次.csv'))\n",
+    "\n",
+    "    reindexcolumns = ['InfoDate', 'WDWK', 'BoardingHour', 'DeboardingHour',\n",
+    "                    'RouteUID', 'RouteName', 'SubRouteUID', 'SubRouteName', 'Direction', \n",
+    "                    'BoardingStopUID', 'BoardingStopName', 'BoardingStopSequence',\n",
+    "                    'DeboardingStopUID', 'DeboardingStopName', 'DeboardingStopSequence', \n",
+    "                    'Count']\n",
+    "\n",
+    "    df = df.reindex(columns = reindexcolumns)\n",
+    "    df['InfoDate'] = pd.to_datetime(df['InfoDate'], errors='coerce')\n",
+    "    df['Month'] = df['InfoDate'].dt.to_period('M')\n",
+    "    df = df[df['WDWK'].isin([0,1])]\n",
+    "\n",
+    "\n",
+    "    df_on = df.reindex(columns = ['Month', 'WDWK', 'BoardingHour', 'Direction', 'RouteUID', 'SubRouteUID', 'BoardingStopSequence', 'Count']).rename(columns = {'BoardingHour':'Hour', 'BoardingStopSequence':'StopSequence', 'Count':'On'})\n",
+    "    on_groupby_columns = [c for c in df_on.columns if c != \"On\"]\n",
+    "    df_on[on_groupby_columns] = df_on[on_groupby_columns].fillna('-99')\n",
+    "    df_on = df_on.groupby(on_groupby_columns).agg({'On': 'sum'}).reset_index()\n",
+    "\n",
+    "    df_off = df.reindex(columns = ['Month', 'WDWK', 'DeboardingHour', 'Direction', 'RouteUID', 'SubRouteUID', 'DeboardingStopSequence', 'Count']).rename(columns = {'DeboardingHour':'Hour', 'DeboardingStopSequence':'StopSequence', 'Count':'Off'})\n",
+    "    off_groupby_columns = [c for c in df_off.columns if c != \"Off\"]\n",
+    "    df_off[off_groupby_columns] = df_off[off_groupby_columns].fillna('-99')\n",
+    "    df_off = df_off.groupby(off_groupby_columns).agg({'Off': 'sum'}).reset_index()\n",
+    "\n",
+    "    df_hourseq = seq_withhour(monthlist=['2024-10', '2024-11'])\n",
+    "\n",
+    "    dfcount = pd.merge(df_hourseq, \n",
+    "                    df_on, \n",
+    "                    on = ['Month', 'WDWK', 'Hour', 'RouteUID', 'SubRouteUID', 'Direction', 'StopSequence'], \n",
+    "                    how = 'left')\n",
+    "    dfcount = pd.merge(dfcount, \n",
+    "                    df_off, \n",
+    "                    on = ['Month', 'WDWK', 'Hour', 'RouteUID', 'SubRouteUID', 'Direction', 'StopSequence'], \n",
+    "                    how = 'left')\n",
+    "    dfcount[['On', 'Off']] = dfcount[['On', 'Off']] .fillna(0)\n",
+    "\n",
+    "    return dfcount, df_on, df_off"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "id": "279989ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_14952\\1313684567.py:3: DtypeWarning: Columns (5) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(os.path.join(hourlycount_folder, '上下車區分票種分時計次.csv'))\n"
+     ]
+    }
+   ],
    "source": [
-    "# 分析02: 重新比對站序 & 處理站間量\n",
-    "# df = pd.read_csv(os.path.join(hourlycount_folder, '上下車區分票種分時計次.csv'))\n",
-    "\n",
-    "reindexcolumns = ['InfoDate', 'WDWK', 'BoardingHour', 'DeboardingHour',\n",
-    "                  'RouteUID', 'RouteName', 'SubRouteUID', 'SubRouteName', 'Direction', \n",
-    "                  'BoardingStopUID', 'BoardingStopName', 'BoardingStopSequence',\n",
-    "                  'DeboardingStopUID', 'DeboardingStopName', 'DeboardingStopSequence', \n",
-    "                  'Count']\n",
-    "\n",
-    "df = df.reindex(columns = reindexcolumns)\n",
-    "df['InfoDate'] = pd.to_datetime(df['InfoDate'], errors='coerce')\n",
-    "df['Month'] = df['InfoDate'].dt.to_period('M')\n",
-    "df = df[df['WDWK'].isin([0,1])]\n",
-    "\n",
-    "\n",
-    "df_on = df.reindex(columns = ['Month', 'WDWK', 'BoardingHour', 'Direction', 'RouteUID', 'SubRouteUID', 'BoardingStopSequence', 'Count']).rename(columns = {'BoardingHour':'Hour', 'BoardingStopSequence':'StopSequence', 'Count':'On'})\n",
-    "on_groupby_columns = [c for c in df_on.columns if c != \"On\"]\n",
-    "df_on[on_groupby_columns] = df_on[on_groupby_columns].fillna('-99')\n",
-    "df_on = df_on.groupby(on_groupby_columns).agg({'On': 'sum'}).reset_index()\n",
-    "\n",
-    "df_off = df.reindex(columns = ['Month', 'WDWK', 'DeboardingHour', 'Direction', 'RouteUID', 'SubRouteUID', 'DeboardingStopSequence', 'Count']).rename(columns = {'DeboardingHour':'Hour', 'DeboardingStopSequence':'StopSequence', 'Count':'Off'})\n",
-    "off_groupby_columns = [c for c in df_off.columns if c != \"Off\"]\n",
-    "df_off[off_groupby_columns] = df_off[off_groupby_columns].fillna('-99')\n",
-    "df_off = df_off.groupby(off_groupby_columns).agg({'Off': 'sum'}).reset_index()\n"
+    "dfcount, df_on, df_off = seq_on_and_off_count(hourlycount_folder)"
    ]
   },
   {
@@ -1158,25 +1182,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "id": "6cbd6ac5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(23024380)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dfcount = pd.merge(df_hourseq, \n",
-    "                   df_on, \n",
-    "                   on = ['Month', 'WDWK', 'Hour', 'RouteUID', 'SubRouteUID', 'Direction', 'StopSequence'], \n",
-    "                   how = 'left')"
+    "df_on['On'].sum()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1877e5f",
+   "id": "40e4169c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def"
+    "df_off['Off']."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "a1877e5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23024380\n",
+      "23929095.0\n",
+      "23024380\n",
+      "23928749.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_on['On'].sum())\n",
+    "print(dfcount['On'].sum())\n",
+    "\n",
+    "print(df_off['Off'].sum())\n",
+    "print(dfcount['Off'].sum())"
    ]
   },
   {
