fix: 計算站間量嘗試中

--- a/03_TicketAnalysisCode.ipynb
+++ b/03_TicketAnalysisCode.ipynb
@@ -1207,302 +1207,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
+   "id": "844bbc7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfcountbackup = dfcount.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b7ec3d71",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>RouteUID</th>\n",
-       "      <th>RouteName</th>\n",
-       "      <th>SubRouteUID</th>\n",
-       "      <th>SubRouteName</th>\n",
-       "      <th>Month</th>\n",
-       "      <th>WDWK</th>\n",
-       "      <th>Hour</th>\n",
-       "      <th>Direction</th>\n",
-       "      <th>StopUID</th>\n",
-       "      <th>StopName</th>\n",
-       "      <th>StopSequence</th>\n",
-       "      <th>PositionLon</th>\n",
-       "      <th>PositionLat</th>\n",
-       "      <th>On</th>\n",
-       "      <th>Off</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>KEE0155</td>\n",
-       "      <td>3044</td>\n",
-       "      <td>KEE015501</td>\n",
-       "      <td>3044</td>\n",
-       "      <td>2024-10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>KEE306661</td>\n",
-       "      <td>基隆火車站(南站)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>121.738670</td>\n",
-       "      <td>25.131280</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>KEE0155</td>\n",
-       "      <td>3044</td>\n",
-       "      <td>KEE015501</td>\n",
-       "      <td>3044</td>\n",
-       "      <td>2024-10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>KEE306737</td>\n",
-       "      <td>孝二路</td>\n",
-       "      <td>2</td>\n",
-       "      <td>121.740275</td>\n",
-       "      <td>25.129851</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>KEE0155</td>\n",
-       "      <td>3044</td>\n",
-       "      <td>KEE015501</td>\n",
-       "      <td>3044</td>\n",
-       "      <td>2024-10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>KEE306736</td>\n",
-       "      <td>三十一號橋</td>\n",
-       "      <td>3</td>\n",
-       "      <td>121.736985</td>\n",
-       "      <td>25.130240</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>KEE0155</td>\n",
-       "      <td>3044</td>\n",
-       "      <td>KEE015501</td>\n",
-       "      <td>3044</td>\n",
-       "      <td>2024-10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>KEE309534</td>\n",
-       "      <td>基隆轉運站</td>\n",
-       "      <td>4</td>\n",
-       "      <td>121.739089</td>\n",
-       "      <td>25.133076</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>KEE0155</td>\n",
-       "      <td>3044</td>\n",
-       "      <td>KEE015501</td>\n",
-       "      <td>3044</td>\n",
-       "      <td>2024-10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>KEE309535</td>\n",
-       "      <td>民治里活動中心</td>\n",
-       "      <td>5</td>\n",
-       "      <td>121.740028</td>\n",
-       "      <td>25.134482</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16957819</th>\n",
-       "      <td>TPE810</td>\n",
-       "      <td>敦化幹線</td>\n",
-       "      <td>TPE810</td>\n",
-       "      <td>敦化幹線</td>\n",
-       "      <td>2024-11</td>\n",
-       "      <td>1</td>\n",
-       "      <td>23</td>\n",
-       "      <td>1</td>\n",
-       "      <td>TPE18255</td>\n",
-       "      <td>捷運六張犁站(和平)</td>\n",
-       "      <td>41</td>\n",
-       "      <td>121.553535</td>\n",
-       "      <td>25.023243</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16957820</th>\n",
-       "      <td>TPE810</td>\n",
-       "      <td>敦化幹線</td>\n",
-       "      <td>TPE810</td>\n",
-       "      <td>敦化幹線</td>\n",
-       "      <td>2024-11</td>\n",
-       "      <td>1</td>\n",
-       "      <td>23</td>\n",
-       "      <td>1</td>\n",
-       "      <td>TPE18257</td>\n",
-       "      <td>富陽街口</td>\n",
-       "      <td>42</td>\n",
-       "      <td>121.555911</td>\n",
-       "      <td>25.021034</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16957821</th>\n",
-       "      <td>TPE810</td>\n",
-       "      <td>敦化幹線</td>\n",
-       "      <td>TPE810</td>\n",
-       "      <td>敦化幹線</td>\n",
-       "      <td>2024-11</td>\n",
-       "      <td>1</td>\n",
-       "      <td>23</td>\n",
-       "      <td>1</td>\n",
-       "      <td>TPE18259</td>\n",
-       "      <td>黎忠市場</td>\n",
-       "      <td>43</td>\n",
-       "      <td>121.557804</td>\n",
-       "      <td>25.019261</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16957822</th>\n",
-       "      <td>TPE810</td>\n",
-       "      <td>敦化幹線</td>\n",
-       "      <td>TPE810</td>\n",
-       "      <td>敦化幹線</td>\n",
-       "      <td>2024-11</td>\n",
-       "      <td>1</td>\n",
-       "      <td>23</td>\n",
-       "      <td>1</td>\n",
-       "      <td>TPE57540</td>\n",
-       "      <td>捷運麟光站</td>\n",
-       "      <td>44</td>\n",
-       "      <td>121.558530</td>\n",
-       "      <td>25.018250</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16957823</th>\n",
-       "      <td>TPE810</td>\n",
-       "      <td>敦化幹線</td>\n",
-       "      <td>TPE810</td>\n",
-       "      <td>敦化幹線</td>\n",
-       "      <td>2024-11</td>\n",
-       "      <td>1</td>\n",
-       "      <td>23</td>\n",
-       "      <td>1</td>\n",
-       "      <td>TPE18261</td>\n",
-       "      <td>麟光站</td>\n",
-       "      <td>45</td>\n",
-       "      <td>121.561041</td>\n",
-       "      <td>25.015473</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>16957824 rows × 15 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         RouteUID RouteName SubRouteUID SubRouteName    Month  WDWK  Hour  \\\n",
-       "0         KEE0155      3044   KEE015501         3044  2024-10     0     0   \n",
-       "1         KEE0155      3044   KEE015501         3044  2024-10     0     0   \n",
-       "2         KEE0155      3044   KEE015501         3044  2024-10     0     0   \n",
-       "3         KEE0155      3044   KEE015501         3044  2024-10     0     0   \n",
-       "4         KEE0155      3044   KEE015501         3044  2024-10     0     0   \n",
-       "...           ...       ...         ...          ...      ...   ...   ...   \n",
-       "16957819   TPE810      敦化幹線      TPE810         敦化幹線  2024-11     1    23   \n",
-       "16957820   TPE810      敦化幹線      TPE810         敦化幹線  2024-11     1    23   \n",
-       "16957821   TPE810      敦化幹線      TPE810         敦化幹線  2024-11     1    23   \n",
-       "16957822   TPE810      敦化幹線      TPE810         敦化幹線  2024-11     1    23   \n",
-       "16957823   TPE810      敦化幹線      TPE810         敦化幹線  2024-11     1    23   \n",
-       "\n",
-       "          Direction    StopUID    StopName  StopSequence  PositionLon  \\\n",
-       "0                 0  KEE306661   基隆火車站(南站)             1   121.738670   \n",
-       "1                 0  KEE306737         孝二路             2   121.740275   \n",
-       "2                 0  KEE306736       三十一號橋             3   121.736985   \n",
-       "3                 0  KEE309534       基隆轉運站             4   121.739089   \n",
-       "4                 0  KEE309535     民治里活動中心             5   121.740028   \n",
-       "...             ...        ...         ...           ...          ...   \n",
-       "16957819          1   TPE18255  捷運六張犁站(和平)            41   121.553535   \n",
-       "16957820          1   TPE18257        富陽街口            42   121.555911   \n",
-       "16957821          1   TPE18259        黎忠市場            43   121.557804   \n",
-       "16957822          1   TPE57540       捷運麟光站            44   121.558530   \n",
-       "16957823          1   TPE18261         麟光站            45   121.561041   \n",
-       "\n",
-       "          PositionLat   On  Off  \n",
-       "0           25.131280  0.0  0.0  \n",
-       "1           25.129851  0.0  0.0  \n",
-       "2           25.130240  0.0  0.0  \n",
-       "3           25.133076  0.0  0.0  \n",
-       "4           25.134482  0.0  0.0  \n",
-       "...               ...  ...  ...  \n",
-       "16957819    25.023243  0.0  0.0  \n",
-       "16957820    25.021034  0.0  0.0  \n",
-       "16957821    25.019261  0.0  0.0  \n",
-       "16957822    25.018250  0.0  0.0  \n",
-       "16957823    25.015473  0.0  0.0  \n",
-       "\n",
-       "[16957824 rows x 15 columns]"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dfcount"
+    "# 計算站間累計人數\n",
+    "for i in range(len(dfcount)):\n",
+    "    if dfcount.loc[i, 'StopSequence'] == 1:\n",
+    "        dfcount.loc[i, 'OnBus'] = dfcount.loc[i, 'On'] - dfcount.loc[i, 'Off']\n",
+    "    else:\n",
+    "        dfcount.loc[i, 'OnBus'] = dfcount.loc[i - 1, 'On'] + dfcount.loc[i, 'On'] - dfcount.loc[i, 'Off']\n",
+    "dfcount.loc[dfcount['OnBus'] < 0, 'OnBus'] = 0"
    ]
   }
  ],
